# glabels-qt

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: python-publish.yml  windows-installer.yml
build-python/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  VERSION.txt  cmake_install.cmake
build-python/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-python/backends/: Makefile  cmake_install.cmake
build-python/backends/barcode/: Makefile  cmake_install.cmake  moc_Backends.cpp  moc_Backends.cpp_parameters
build-python/backends/merge/: Makefile  cmake_install.cmake  moc_Merge.cpp  moc_Merge.cpp_parameters
build-python/glbarcode/: Makefile  cmake_install.cmake
build-python/model/: Config.hpp  Makefile  Version.hpp  cmake_install.cmake  moc_Model.cpp  moc_Model.cpp_parameters  moc_ModelBarcodeObject.cpp  moc_ModelBarcodeObject.cpp_parameters  moc_ModelBoxObject.cpp  moc_ModelBoxObject.cpp_parameters  moc_ModelEllipseObject.cpp  moc_ModelEllipseObject.cpp_parameters  moc_ModelImageObject.cpp  moc_ModelImageObject.cpp_parameters  moc_ModelLineObject.cpp  moc_ModelLineObject.cpp_parameters  moc_ModelObject.cpp  moc_ModelObject.cpp_parameters  moc_ModelShapeObject.cpp  moc_ModelShapeObject.cpp_parameters  moc_ModelTextObject.cpp  moc_ModelTextObject.cpp_parameters  moc_PageRenderer.cpp  moc_PageRenderer.cpp_parameters  moc_Settings.cpp  moc_Settings.cpp_parameters  moc_Variables.cpp  moc_Variables.cpp_parameters
build-python/model/unit_tests/: Makefile  cmake_install.cmake
build-python/python/: Makefile  cmake_install.cmake
build-python/templates/: Makefile  cmake_install.cmake
data/: org.glabels.glabels-qt.metainfo.xml
docs/: TEMPLATE-STYLE.md
glabels/: TemplatePicker.cpp
model/: CMakeLists.txt  Db.cpp  Db.hpp  GenericTemplate.cpp  GenericTemplate.hpp  Paper.cpp  Paper.hpp  XmlLabelParser_3.cpp  XmlPaperParser.cpp
model/unit_tests/: TestXmlLabel.cpp
python/: CMakeLists.txt  TODO-python-bindings-en.md  TODO-python-bindings.md  bind_barcode.cpp  bind_io.cpp  bind_merge.cpp  bind_model.cpp  bind_renderer.cpp  bind_template.cpp  bind_types.cpp  glabels_ext.cpp  qt_type_casters.hpp
python/glabels/: __init__.py  batch.py  label.py  template_db.py
templates/: dymo-other-templates.xml  felga-templates.xml  glabels-4.0.dtd  misc-iso-templates.xml  paper-sizes.xml
tests/python/: test_distance.py  test_label.py  test_render.py  test_template_db.py
translations/: CMakeLists.txt  LINGUAS  glabels_C.ts
user-docs/: CMakeLists.txt  NOTES.txt  README.md  conf.py
user-docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
user-docs/_build/html/_sources/man/: glabels-batch-qt.rst.txt  glabels-qt.rst.txt
user-docs/_build/html/_sources/manual/: basicusage.rst.txt  editing_object_properties.rst.txt  opening.rst.txt  tutorials.rst.txt
user-docs/_build/html/man/: glabels-batch-qt.html  glabels-qt.html  index.html
user-docs/_build/html/manual/: advanced.html  basicusage.html  changingproperties.html  createnew.html  creating_objects.html  customizing.html  documentmerge.html  editing.html  editing_object_properties.html  interface.html  license.html  mailing_list_project.html  mancreate.html  manipulating_objects.html  merge_examples.html  opening.html  printing.html  reference.html  saving.html  selecting_objects.html  simple_project.html  skipfields.html  spreadsheet_export.html  starting.html  subst_spec.html  template_designer.html  tutorials.html  user_defined_variables.html  using_substitution_fields.html
user-docs/_build/man/: glabels-batch-qt.1  glabels-qt.1
user-docs/_build/qthelp/: .buildinfo  gLabels.qch  gLabels.qhc  gLabels.qhp  genindex.html  index.html
user-docs/_build/qthelp/man/: glabels-batch-qt.html  glabels-qt.html  index.html
user-docs/_build/qthelp/manual/: advanced.html  basicusage.html  changingproperties.html  createnew.html  creating_objects.html  customizing.html  documentmerge.html  editing.html  editing_object_properties.html  interface.html  license.html  mailing_list_project.html  mancreate.html  manipulating_objects.html  merge_examples.html  opening.html  printing.html  reference.html  saving.html  selecting_objects.html  simple_project.html  skipfields.html  spreadsheet_export.html  starting.html  subst_spec.html  template_designer.html  tutorials.html  user_defined_variables.html  using_substitution_fields.html
user-docs/manual/: advanced.rst  basicusage.rst  changingproperties.rst  createnew.rst  creating_objects.rst  customizing.rst  documentmerge.rst  editing.rst  editing_object_properties.rst  index.rst  interface.rst  license.rst  mancreate.rst  manipulating_objects.rst  merge_examples.rst  opening.rst  printing.rst  reference.rst  saving.rst  selecting_objects.rst  simple_project.rst  starting.rst  subst_spec.rst  template_designer.rst  tutorials.rst  user_defined_variables.rst  using_substitution_fields.rst
user-docs/manual/01_basic_usage/: index.rst
user-docs/manual/01_basic_usage/01_starting/: index.rst
user-docs/manual/01_basic_usage/02_interface/: index.rst
user-docs/manual/01_basic_usage/03_create_new/: index.rst
user-docs/manual/01_basic_usage/04_saving/: index.rst
user-docs/manual/01_basic_usage/06_editing_activity/: index.rst
user-docs/manual/01_basic_usage/06_editing_activity/03_editing_object_properties/: skip_fields.rst
user-docs/manual/01_basic_usage/08_document_merge_activity/: index.rst
user-docs/manual/01_basic_usage/09_variables_activity/: index.rst
user-docs/manual/01_basic_usage/10_printing_activity/: index.rst
user-docs/manual/02_tutorials/: index.rst
user-docs/manual/03_advanced_usage/: index.rst
user-docs/manual/03_advanced_usage/01_template_designer/: index.rst
user-docs/manual/03_advanced_usage/02_manual_templates/: index.rst
user-docs/manual/04_reference/: index.rst
user-docs/manual/04_reference/03_spreadsheet_export/: index.rst
user-docs/manual/04_reference/04_license/: index.rst
